public/css/hanzi-graph.css
/* ... */
.explore-tab.active {
    opacity: 1;
    font-weight: 400;
}

.character-header {
    font-size: 38px;
    font-family: sans-serif;
}

.pronunciations {
    margin: 0;
}

.pronunciation {
    font-weight: 400;
    font-size: 22px;
}

.character-data {
    margin-bottom: 12px;
}

.character-data a.navigable {
    margin-right: 20px;
}

.collocations-detail {
    text-align: center;
    margin: 6px 0 0 0;
}

.collocation a:first-of-type::before,
.collocation a:last-of-type::after {
    content: '...'
}

.collocation {
    margin: 8px 0;
}

.collocation a {
    cursor: pointer;
    margin: 0 6px;
}

.collocation-root {
    text-decoration: underline;
}

.character-data h3 {
    margin: 8px 0;
}

.pinyin-relationship {
    font-size: 18px;
    font-weight: bold;
    color: var(--primary-font-color);
}

.related-characters {
    font-size: 30px;
    font-weight: var(--target-language-font-weight);
}

.nowrap {
    white-space: nowrap;
}

.tone1 {
    color: var(--tone-1-color);
}

.tone2 {
    color: var(--tone-2-color);
}

.tone3 {
    color: var(--tone-3-color);
}

.tone4 {
    color: var(--tone-4-color);
}

.tone5 {
    color: var(--neutral-tone-color);
}

.freq1 {
    color: #fc5c7d;
}

.freq2 {
    color: #ea6596;
}

.freq3 {
    color: #d56eaf;
}

.freq4 {
    color: #bb75c8;
}

.freq5 {
    color: #9b7ce1;
}

.freq6 {
    color: #6a82fb;
}

.emphasized {
    font-size: 20px;
    font-weight: bold;
}

/* TODO: font-size: larger, etc.? */
.emphasized-but-not-that-emphasized {
    font-size: 16px;
    font-weight: bold;
}

.emphasized-target {
    font-size: 24px;
    font-weight: bold;
}

.deemphasized {
    font-size: 12px;
    opacity: 0.8;
}

h2.word-header {
    font-family: var(--primary-font);
}

.word-header.active .clickable {
    border-left: 8px solid var(--accent-color);
    transition: border-left-width 0.35s, border-left-color 0.35s;
}

.word-header .clickable {
    border-left: 2px solid var(--inactive-accent-color);
    padding-left: 6px;
    padding-top: 4px;
    transition: border-left-width 0.35s, border-left-color 0.35s;
}

.explore-tab.active .separator {
    width: 60px;
    height: 4px;
    display: block;
    background: var(--accent-color);
}

.explore-tab.active .separator {
    margin: 2px auto 0 auto;
}

.expand {
    animation: expand 0.5s;
}

@keyframes expand {
    0% {
        width: 0;
    }

    100% {
        width: 60px;
    }
}

.definitions {
    margin: 6px 0;
}

.definition {
    margin: 6px 0;
    line-height: 18px;
}

.definition .tone1,
.definition .tone2,
.definition .tone3,
.definition .tone4,
.definition .tone5 {
    font-weight: bold;
    font-size: 18px;
}

.definition-part {
    margin: 0 2px 0 6px;
}

.definition-number {
    font-weight: bold;
    font-size: 18px;
}

.tags {
    margin-top: 8px;
}

.tag {
    padding: 2px;
    border-radius: 4px;
    border: var(--tag-border);
    cursor: pointer;
    margin-right: 4px;
}

.example {
    margin: 16px 0;
}

.explore-stat-header {
    margin: 8px 0 0 0;
    text-align: center;
}

.coverage-explanation {
    margin: 0 0 6px 0;
}

.coverage-explanation+svg {
    margin-top: 6px;
}

.suggestions-explanation {
    font-size: var(--instructions-font-size);
    margin-top: 4px;
}

.context,
.coverage-explanation {
    font-size: var(--instructions-font-size);
}

.target {
    font-size: var(--target-language-font-size);
    font-weight: var(--target-language-font-weight);
    /* TODO(refactor) why flex? */
    display: flex;
    opacity: var(--primary-opacity);
    margin: var(--example-item-margin);
}

.base {
    margin: var(--example-item-margin);
    opacity: var(--secondary-opacity);
    font-size: var(--base-language-font-size);
}

.transcription {
    display: none;
    margin: var(--example-item-margin);
    opacity: var(--tertiary-opacity);
    font-size: var(--base-language-font-size);
}

.context,
.context-line {
    margin: 4px 0 0 0;
}

.active-link {
    text-decoration: underline;
    color: var(--link-font-color);
    cursor: pointer;
}

#show-pinyin:checked~* .transcription {
    display: block;
}

/* CSS icons */
.menu-button {
    width: 20px;
    height: 2px;
    box-shadow: inset 0 0 0 32px, 0 -6px, 0 6px;
    display: inline-block;
    margin: var(--menu-button-margin);
    cursor: pointer;
}

.stats-button {
    position: relative;
    display: inline-block;
    border-top-width: 0;
    border-right-width: 0;
    border-color: transparent;
    box-shadow: -2px 2px;
    width: 30px;
    height: 22px;
    margin: 4px 0 8px 4px;
    overflow: hidden;
    box-sizing: border-box;
    cursor: pointer;
    padding: 0;
}

.stats-button::before {
    content: '';
    position: absolute;
    left: 2px;
    bottom: 0;
    width: 4px;
    height: 15px;
    box-shadow: inset 0 -8px 0 0, 6px 0, 12px 7px, 18px 5px;
}

.exit-button {
    cursor: pointer;
    box-sizing: border-box;
    position: relative;
    display: inline-block;
    width: 30px;
    height: 30px;
    border: 2px solid;
    border-radius: 4px;
    margin-top: 2px;
}

.exit-button::after,
.exit-button::before {
    content: "";
    display: block;
    box-sizing: border-box;
    position: absolute;
    left: 6px
}

.exit-button::after {
    width: 10px;
    height: 10px;
    border-bottom: 2px solid;
    border-left: 2px solid;
    transform: rotate(45deg);
    bottom: 8px
}

.exit-button::before {
    width: 14px;
    height: 2px;
    bottom: 12px;
    background: currentColor;
}

.study-button {
    box-sizing: border-box;
    position: relative;
    display: block;
    width: 20px;
    height: 22px;
    border: 2px solid;
    border-radius: 3px;
    cursor: pointer;
    margin: var(--right-button-margin);
}

.study-button::after,
.study-button::before {
    content: "";
    display: block;
    box-sizing: border-box;
    position: absolute;
    border-radius: 3px;
    height: 2px;
    background: currentColor;
    left: 2px
}
/* ... */

